--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,8 @@
+Deprecated==1.3.1
+PyGithub==2.5.0
+PyJWT==2.10.1
+PyNaCl==1.6.2
+PyYAML==6.0.3
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.12.1
@@ -9,12 +14,11 @@ celery==5.4.0
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+click==8.3.1
 cryptography==46.0.3
-Deprecated==1.3.1
 dnspython==2.8.0
 ecdsa==0.19.1
 exceptiongroup==1.3.1
@@ -22,12 +26,13 @@ fastapi==0.115.6
 google-ai-generativelanguage==0.6.10
 google-api-core==2.29.0
 google-api-python-client==2.188.0
-google-auth==2.47.0
 google-auth-httplib2==0.3.0
+google-auth==2.47.0
 google-generativeai==0.8.3
 googleapis-common-protos==1.72.0
-grpcio==1.76.0
+groq
 grpcio-status==1.71.2
+grpcio==1.76.0
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.1
@@ -44,13 +49,10 @@ protobuf==5.29.5
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==2.23
-pydantic==2.10.6
 pydantic-settings==2.7.1
+pydantic==2.10.6
 pydantic_core==2.27.2
-PyGithub==2.5.0
-PyJWT==2.10.1
 pymongo==4.9.2
-PyNaCl==1.6.2
 pyparsing==3.3.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -58,7 +60,6 @@ python-engineio==4.13.0
 python-jose==3.3.0
 python-multipart==0.0.20
 python-socketio==5.16.0
-PyYAML==6.0.3
 redis==5.2.1
 requests==2.32.5
 rsa==4.9.1
